--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "chat-client",
   "version": "0.1.0",
+  "homepage": "https://github.com/CuTuanMinh/chat-client",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
